--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-top": "^1.0.5",
+    "react-scroll-up": "^1.3.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
